--- a/loganenfield.css
+++ b/loganenfield.css
@@ -1,7 +1,7 @@
 /*   Tb #35 - The Library of Agony - CiaranSouls Codes 2022. Son libres de revisar el code, sin embargo si usan algo por favor poner créditos c:  */
 
 
-#Lb_Ab{
+#Lb_AbEN {
     width: 400px;
     height: auto;
     padding: 50px;
