--- a/loganenfield.css
+++ b/loganenfield.css
@@ -65,7 +65,7 @@
 
 .Lb_cnttEN i{color:var(--cursiveLbLOG);}
 
-.Lb_cnt_T {
+.Lb_cnttEN {
 width:13px;
  font-family: 'Lora', serif;
  font-family: 'Staatliches', cursive;
